--- a/src/main/resources/static/web/pages/pagos.html
+++ b/src/main/resources/static/web/pages/pagos.html
@@ -46,15 +46,15 @@
 
                 <div id="hamburguesitas">
                     <div>
-                        <a href=""><img src="../media/iconoBurger.png"></a>
+                        <a href="../index.html"><img src="../media/iconoBurger.png"></a>
                         <p>Menu</p>
                     </div>
                     <div>
-                        <a href=""><img src="https://cdn-icons-png.flaticon.com/512/30/30569.png"></a>
-                        <p>Royal Oak</p>
+                        <a href="./random.html"><img src="https://cdn-icons-png.flaticon.com/512/30/30569.png"></a>
+                        <p>Royal</p>
                     </div>
                     <div>
-                        <a href="./login.html"><img src="../media/Register.webp"></a>
+                        <a href="../login.html"><img src="../media/Register.webp"></a>
                         <p>Registrarme</p>
                     </div>
                     <div>
@@ -93,17 +93,17 @@
                     <p>Menu</p>
                 </div>
                 <div>
-                    <a href="./pages/carrito.html"><img class="scale-up-center" src="../media/iconoBolsita.webp"
+                    <a href="./carrito.html"><img class="scale-up-center" src="../media/iconoBolsita.webp"
                             alt=""></a>
                     <p>Pedido</p>
                 </div>
                 <div>
-                    <a href=""><img class="scale-up-center" src="https://cdn-icons-png.flaticon.com/512/30/30569.png"
+                    <a href="./random.html"><img class="scale-up-center" src="https://cdn-icons-png.flaticon.com/512/30/30569.png"
                             alt=""></a>
                     <p>Royal</p>
                 </div>
                 <div>
-                    <a href="./login.html"><img class="scale-up-center " src="../media/Register.webp" alt=""></a>
+                    <a href="../login.html"><img class="scale-up-center " src="../media/Register.webp" alt=""></a>
                     <p>Registro</p>
                 </div>
                 <div id="salir">
@@ -138,7 +138,7 @@
                     <h1>Detalles de Pago</h1>
                 </div>
                 <div class="formPasarela">
-                    <form>
+                    <form class="formForm">
                         <fieldset class="number">
                             <label for="number">Número de Tarjeta</label>
                             <input id="number" type="num" maxlength="4" v-model="numUno" />
