--- a/src/main/resources/static/web/pages/perfil.html
+++ b/src/main/resources/static/web/pages/perfil.html
@@ -50,7 +50,7 @@
                   <p>Menu</p>   
               </div>
               <div>
-                  <a href="../pages/random.html"><img src="../media/royal_menuH.png"></a>
+                  <a href="./random.html"><img src="../media/royal_menuH.png"></a>
                   <p>Royal</p>
               </div>
               <div v-if="cliente.length == 0">
@@ -58,7 +58,7 @@
                   <p>Registrarme</p>
               </div>
               <div v-else>
-                  <a href="../pages/perfil.html"><img src="../media/perfil_menuH.png"></a>
+                  <a href="./perfil.html"><img src="../media/perfil_menuH.png"></a>
                   <p>Perfil</p>
               </div>
               <div>
@@ -97,12 +97,12 @@
                   <p>Menu</p>
           </div>
           <div>
-                  <a href="#"><img class="scale-up-center" src="../media/iconoBolsita.webp"
+                  <a href="./carrito.html"><img class="scale-up-center" src="../media/iconoBolsita.webp"
                                   alt="pedido"></a>
                   <p>Pedido</p>
           </div>
           <div>
-                  <a href="../pages/random.html"><img class="scale-up-center" src="https://cdn-icons-png.flaticon.com/512/30/30569.png"
+                  <a href="./random.html"><img class="scale-up-center" src="https://cdn-icons-png.flaticon.com/512/30/30569.png"
                                   alt="royal"></a>
                   <p>Royal</p>
           </div>
@@ -112,7 +112,7 @@
                   <p>Registro</p>
           </div>
           <div v-else>
-              <a href="../pages/perfil.html"><img src="../media/perfil.png" alt="perfil"></a>
+              <a href="./perfil.html"><img src="../media/perfil.png" alt="perfil"></a>
               <p>Perfil</p>
           </div>
           <div id="salir">
