--- a/src/main/resources/static/web/admin/edit.html
+++ b/src/main/resources/static/web/admin/edit.html
@@ -10,28 +10,14 @@
                 integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
                 crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./css/edit.css">
+        <link rel="stylesheet" href="./edit.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="icon" href="assets/logo-royaloak-2 (1).ico">
-        <title>Edit product</title>
+        <title>Edit product | Royal Oak</title>
 </head>
 
 <body>
         <div id="app">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <section class="container">
                 <!-- <header>
                     
@@ -39,10 +25,9 @@
                 </header> -->
                 <div id="padre">
                     <div>
-                        <a href="admin.html"><img id="flecha" src="./media/logo-royaloak.png" alt="atras"></a>
+                        <a href="admin.html"><img id="flecha" src="https://res.cloudinary.com/royal-oak-imagenes/image/upload/v1656443334/logo-simplificado_xcuvzo.png" alt="Logo"></a>
                         <h5 class="link-light">Volver</h5>
                     </div>
-                    <!-- <div id="logo"><img src="img/h.png" alt="Logo"></div> -->
                 </div>
                 <section class="content">
                     <article id="checkoutNav" class="shadow">
@@ -195,7 +180,7 @@
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>AOS.init({ duration: 1200, })</script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="./js/edit.js"></script>
+        <script src="./edit.js"></script>
         <script src="./js/sweetAlert.js"></script>
         <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
 </body>
