el utlimo ultimo commit, ahora si

--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -93,7 +93,7 @@
                                     <a href="./index.html"><img src="https://res.cloudinary.com/royal-oak-imagenes/image/upload/v1656443334/logo-simplificado_xcuvzo.png" alt="Logo"></a>
                             </div>
                             <div id="menu">
-                                    <a href="./index.html"><img class="scale-up-center" id="iconos"
+                                    <a href="#contenedorCategorias"><img class="scale-up-center" id="iconos"
                                                     src="./media/iconoBurger.png" alt="menu"></a>
                                     <p>Menu</p>
                             </div>
