--- a/src/main/resources/static/web/pages/pagos.html
+++ b/src/main/resources/static/web/pages/pagos.html
@@ -103,8 +103,8 @@
                     <p>Royal</p>
                 </div>
                 <div>
-                    <a href="../login.html"><img class="scale-up-center " src="../media/Register.webp" alt=""></a>
-                    <p>Registro</p>
+                    <a href="./perfil.html"><img class="scale-up-center " src="../media/perfil.png" alt=""></a>
+                    <p>Perfil</p>
                 </div>
                 <div id="salir">
                     <a @click="salir"><img class="scale-up-center" src="../media/cerrarSesion.png" alt=""></a>
