--- a/src/main/resources/static/web/pages/random.html
+++ b/src/main/resources/static/web/pages/random.html
@@ -103,7 +103,7 @@
                             </div>
                             <div v-if="cliente.length == 0">
                                 <a href="./login.html"><img src="../media/Register.webp"></a>
-                                <p>Registrarme</p>
+                                <p>Registro</p>
                             </div>
                             <div v-else>
                                 <a href="./perfil.html"><img src="../media/perfil.png"></a>
